--- a/01-Graphing.Rmd
+++ b/01-Graphing.Rmd
@@ -5,7 +5,7 @@
 $("#coverpic").hide();
 </script>
 ```
-[ The commonality between science and art is in trying to see profoundly - to develop strategies of seeing and showing. ---Edward Tufte ]{.newthought}
+[The commonality between science and art is in trying to see profoundly - to develop strategies of seeing and showing. ---Edward Tufte]{.newthought}
 
 As we have found out from the textbook and lecture, when we measure things, we get lots of numbers. Too many. Sometimes so many your head explodes just thinking about them. One of **the most helpful things** you can do to begin to make sense of these numbers, is to look at them in graphical form. Unfortunately, for sight-impaired individuals, graphical summary of data is much more well-developed than other forms of summarizing data for our human senses. Some researchers are developing auditory versions of visual graphs, a process called **sonification**, but we aren't prepared to demonstrate that here. Instead, we will make charts, and plots, and things to look at, rather than the numbers themselves, mainly because these are tools that are easiest to get our hands on, they are the most developed, and they work really well for visual summary. If time permits, at some point I would like to come back here and do the same things with sonification. I think that would be really, really cool!
 
@@ -771,3 +771,54 @@ knitr::include_graphics('img/1.4.24.png')
 2.  Plot the life expectancy of each country in 1800 vs. that of 2018. What does this graph show you? What are your conclusions regarding the development of nations?
 
 ## JAMOVI
+
+## CogStat
+
+When we measure things, we often get so much data that it is almost impossible to manage them without any help. A simple helpful thing to do if you would like to understand your data better is to give them a graphical appearance. In this chapter, we will make charts, plots, and summaries to look at, rather than the numbers themselves. With the help of CogStat, we can graph data and get to know the descriptive statistics of our dataset.
+
+### Goals
+
+-   Load data into CogStat
+-   Overview data structure
+-   Create and understand graphs
+
+### Load the data into CogStat
+
+We will start every task with the same first step, which is, to load the dataset into CogStat. In this part, we will use the dataset “Film_Permits” (<https://opendata.cityofnewyork.us/>). As mentioned in the previous chapter, to load the data into CogStat, choose “Data”, then “Open demo data File…”. It is also possible to drag and drop the file or copy and paste it to the CogStat window. After loading the dataset, you will see the following things, as displayed in the picture above:
+
+![](images/kezdolap.png) In CogStat, as you can see in the picture above, there are two separate areas or panes: on the left, we have all our variables and data, and the right side functions as an output, where the results of our tests will appear.
+
+#### Warnings and error messages
+
+There might be cases, like the one in the picture above, when you will see some warning or error messages. “String variable conversion warning” and “Measurement level warning”: As in many other statistical software, in CogStat variables can be set to nominal, ordinal, or interval (Ratio data is also handled as interval). Since automatic data processing relies on measurement levels a lot, to decide what test to run on the variables, it is important to set the variable measurement levels beforehand. As you can see in the message, string variables are handled as nominal in CogStat. Also, it is always useful and recommended to use short variable names with English characters only. (for more: <https://doc.cogstat.org/Handling-data>)
+
+You might see error messages that are not related to your imported data, for example, a message like “Oops, something went wrong.” will be sent by CogStat if an analysis cannot be completed because of a software error. Depending on your preferences, you can ask CogStat to give you detailed error messages related to these types of error messages. To change these settings select the option “Preferences” (Ctrl+Shift+P) and pick “On” or “Off” at “Detailed error message”. Turning the detailed error messages on can help if you find a bug and would like to report it to us, as with bug reports we always ask for detailed error messages. If you would like to get more information on how to report a bug visit the following link: <https://doc.cogstat.org/Report-a-bug>.
+
+![](images/preferences-01.png)
+
+![](images/detailederror-01.png)
+
+### Where are the most film permits being requested?
+
+If we look at the dataset we loaded into CogStat previously, it shows us that 50,728 film permits were made. Different columns tell us information about each of the film permits. For example, the Borough column lists the Borough for each request, whether it was made for Manhattan, Brooklyn, Bronx, Queen’s, or Staten Island. Now we can ask our first question, and learn how to plot in CogStat. First, we would like to know where the most film permits were requested.
+
+Do you have any guesses? Is it Manhattan, Brooklyn, Queen’s, or Staten Island? We might have a guess, but among this large pile of data, it probably will be wrong, and also, guessing is not scientific. We can find the answer by plotting the data, using a bar plot. We just need to count how many film permits are requested in each borough, and then make different bars to represent the counts.
+
+#### Running your first analysis (Explore variable)
+
+To do that, return to our dataset, and select the “Explore variable” analysis (Ctrl+1). You can choose it from the Quick Access Toolbar or the “Analysis” menu.
+
+![](images/explorevariable1-01.png)
+
+![](images/explorevariable2-01.png)
+
+From “Analysis” you can find all the available analyses, to choose from. Keep in mind that there are no specific tests or graph names to choose from here, as in all cases a task can be chosen. After choosing “Explore variable” a dialogue appears.
+
+![](images/explorevariables-01.png)
+
+In the dialogue, select the variable “Borough” and click on the arrow pointing to the right, or drag and drop the variable from “Available variables” to “Selected variable(s)”. Make sure that “frequencies” is ticked in and press “OK”. (Although, the “Frequencies” button is ticked by default.)
+
+#### Checking the results of the analysis
+Making the result interpretation even easier, the output’s structure in almost every analysis is very similar: First, you see the raw data, then the sample properties, and finally, the population properties. (1) In the raw data section of the output, the number of observed and missing values are counted. All missing values will be excluded from further operations. To understand your data and its parameters better in every case, graphs are also provided with the raw data only. (2) In the sample properties, descriptive statistics are included, with standardised effect sizes, and summaries with graphs. (3) Population properties come with estimations about the population from the taken sample could come from, and the hypothesis tests. (For more: https://doc.cogstat.org/Common-elements-of-the-analysis-results) 
+
+In the first main section of the output called “Raw data”, we can see a histogram with the Boroughs and the frequencies of film permits requested. This information also appears with numbers and percentages in the “Sample properties” part, the second main part of the CogStat output. 
